JA2-Stracciatella Continued
---------------------------

 - Saved games are now compatible between Windows and unix platforms (Linux,
   Mac OS X).  Saves made on Windows can be loaded on Linux and vise versa.
   All new saves are done in Windows format.  Old unix saves can still be
   loaded.

 - Map editor is now included into the game exe.
   Start it with command-like key '-editor' or '-editorauto'.
   Map editor requires Editor.slf to work.

 - Added support for high video resolutions.  For example, game can be
   started in 1024x768 mode like this: ja2.exe -res 1024x768
   Any reasonable resolution should work.

 - Added compilation instructions for building the project on Linux,
   Windows, Mac OS 10.6 - 10.8, cross building on Linux for Windows.

 - Added solution files for Visual Studio 10 Express, Xcode 4.2, 4.6

 - Single exe can now work with many versions (localizations) of the game.
   There is no need anymore to compile binary for every version of the game.

 - There is no need anymore to lower-case game resources on Linux.


JA2-Stracciatella
-----------------

(r7072) Fix a vanilla glitch: When scrolling back in an email, the email delete window was not redrawn properly.
(r7071) Fix a glitch in r4977: The yes/no buttons in the email delete window could not be clicked, when the email had more than one page.
(r7070) Fix a vanilla bug: Darren used the wrong quote for the first fight on a day, if there were fights on previous days.
(r7069) Fix a vanilla bug: The sum of fractions for troops and elites was more than 100% for one army composition.
(r7066) Fix a bug in r3615, which caused an assertion failure/null-pointer access when removing a dead merc via the contract menu.
(r7062) Fix a vanilla bug: When a player group arrives in a sector, in some cases it was checked on the wrong (out of bounds) side, whether enemies noticed them.
(r7056) Fix a vanilla bug, which prevented enemies from climbing roofs.